fix: improve contrast

--- a/css/styles.css
+++ b/css/styles.css
@@ -90,7 +90,7 @@ nav h1 a {
 
 /* Add a color to all links inside the list */
 #breadcrumb li a {
-    color: #0275d8;
+    color: #024583;
     text-decoration: underline;
 }
 
@@ -278,6 +278,10 @@ nav h1 a {
 }
 #restaurant-hours td {
   color: #666;
+}
+
+.comment-box{
+  width: 85%;
 }
 
 /* ====================== Media Queries ====================== */
